Version 3.6.0
* SU table: make more IDI-FITS compliant
* AG table: fill in antenna diameters, or 0 if not known.
  - values used in difxio: difxio/antenna_db.c
* AG table: override mount type with antenna_db.c values

Version 3.5.0
* Remove duplicate RDATE keywords from AG and ML tables
* With changes in difxio, ensure same-day EOPs are equal before merging jobs
* Make use of EOP merging mode concept.  See changelog in difxio.
* Slight restructuring if difx2fits.c: load all filesets at beginning; no need to keep reloading them
* plotpcal2 : second attempt to plot pcals in a more general way.  Still not super satisfactory.
* Fix a case where absence of pulse cal file leads to seg fault (NRAO bug VLB-134, second part)
* Fix a long-standing (introduced in 2009 for DiFX-2.0) problem in generating the MC table:  The last term in the clock polynomial (ususally the rate) was ignored, causing incorrect entries in both the clock (due to drift since the reference time) and clock rate columns of this table.
* Support multiple datastreams per antenna.  Only changes really needed were in handling of DiFX-extracted pulse cal.
* Lynn Matthews reported a problem with AN tables when performing VBGLU.  Problem was found to be populating POLCALA and POLCALB arrays witn NOPCAL=0, causing confusion in AIPS.  Fixed.
* Fix jobmatrix output when subneting and/or given difx files not in time order
* Adding support for taking union of frequency setups; depends on incomplete implementation in difxio
* Don't raise a warning for a normal case where the sniffer buffer can be breached by one element.  Just ignore it and move on.
* Support frequency setup merging using the --union option
* Support building FITS files for profile mode correlations
  (autocorrelations included for bins > 0)
* Check polarizations for legality before proceeding (and segfaulting)
* Fix for cablecal files when reported measurement duration is zero